# systemd

./: -type.h'  .clang-format  .clang-tidy  .clang-tidy-ignore  .clangd  .dir-locals.el  .editorconfig  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .mailmap  .packit.yml  .pylintrc  .travis.yml  .vimrc  .ycm_extra_conf.py  99-systemd.rules  AGENTS.md  AUTHORS  CITATION.cff  CLAUDE.md  CODING_STYLE  CONTRIBUTING.md  ChangeLog  DISTRO_PORTING  ENVIRONMENT.md  FAQ  FEATURE-REMOVAL-SCHEDULE.md  GNU GPL3  HACKING  HOWTO-udev_for_dev  INSTALL  Jenkinsfile  LICENSE  LICENSE.GPL2  LICENSE.LGPL2.1  LICENSE.MIT  LoginActivity  Makefile  (+277 more)
catalog/: .gitignore  meson.build  systemd-fr.catalog  systemd-it.catalog  systemd-ru.catalog  systemd.be.catalog  systemd.be.catalog.in  systemd.be@latin.catalog  systemd.be@latin.catalog.in  systemd.bg.catalog  systemd.bg.catalog.in  systemd.catalog  systemd.catalog.in  systemd.da.catalog  systemd.da.catalog.in  systemd.de.catalog.in  systemd.fr.catalog  systemd.fr.catalog.in  systemd.hr.catalog  systemd.hr.catalog.in  systemd.hu.catalog  systemd.hu.catalog.in  systemd.it.catalog  systemd.it.catalog.in  systemd.ko.catalog  systemd.ko.catalog.in  systemd.pl.catalog  systemd.pl.catalog.in  systemd.pt_BR.catalog  systemd.pt_BR.catalog.in  systemd.ru.catalog  systemd.ru.catalog.in  systemd.sr.catalog  systemd.sr.catalog.in  systemd.zh_CN.catalog  systemd.zh_CN.catalog.in  systemd.zh_TW.catalog  systemd.zh_TW.catalog.in
hostname-wordlist/: README  adjectives  adverbs  meson.build  nouns
hwdb/: .gitignore  20-OUI-vendor.hwdb  20-OUI.hwdb  20-acpi-vendor.hwdb  20-acpi-vendor.hwdb.patch  20-bluetooth-vendor-product.hwdb  20-net-ifname.hwdb  20-pci-classes.hwdb  20-pci-vendor-model.hwdb  20-pci-vendor-product.hwdb  20-sdio-classes.hwdb  20-sdio-vendor-model.hwdb  20-usb-classes.hwdb  20-usb-vendor-model.hwdb  20-usb-vendor-product.hwdb  60-evdev.hwdb  60-input-id.hwdb  60-keyboard.hwdb  60-sensor.hwdb  70-mouse.hwdb  70-pointingstick.hwdb  70-touchpad.hwdb  90-snd_hda_intel.hwdb  acpi-update.py  acpi_id_registry.html  fix-hwdb.py  ids-update.pl  ids_parser.py  ma-large.txt  ma-medium.txt  ma-small.txt  meson.build  parse_hwdb.py  pci.ids  pnp_id_registry.html  sdio.ids  usb.ids
hwdb.d/: .gitattributes  20-OUI.hwdb  20-acpi-vendor.hwdb  20-acpi-vendor.hwdb.patch  20-bluetooth-vendor-product.hwdb  20-dmi-id.hwdb  20-ieee1394-unit-vendor-model.hwdb  20-net-ifname.hwdb  20-pci-classes.hwdb  20-pci-vendor-model.hwdb  20-sdio-vendor-model.hwdb  20-usb-classes.hwdb  20-usb-vendor-model.hwdb  20-vsock.hwdb  40-imds.hwdb  60-autosuspend-fingerprint-reader.hwdb  60-autosuspend-libfprint.hwdb  60-autosuspend.hwdb  60-cameras.hwdb  60-evdev.hwdb  60-hid.hwdb  60-input-id.hwdb  60-keyboard.hwdb  60-master-of-seat.hwdb  60-seat.hwdb  60-sensor.hwdb  60-tpm2.hwdb  70-analysers.hwdb  70-analyzers.hwdb  70-audio-controller.hwdb  70-av-production.hwdb  70-cameras.hwdb  70-debug-appliance.hwdb  70-dj-and-production.hwdb  70-hardware-wallets.hwdb  70-hw-wallets.hwdb  70-input-devices.hwdb  70-joystick.hwdb  70-lights.hwdb  70-maker-tools.hwdb  (+25 more)
libudev/: Makefile.am  exported_symbols  libudev-ctrl.c  libudev-device-db-write.c  libudev-device-private.c  libudev-device.c  libudev-enumerate.c  libudev-list.c  libudev-monitor.c  libudev-private.h  libudev-queue-export.c  libudev-queue-private.c  libudev-queue.c  libudev-selinux-private.c  libudev-util-private.c  libudev-util.c  libudev.c  libudev.h  libudev.pc.in  test-libudev.c
man/: .dir-locals.el  .gitignore  50-xdg-data-dirs.sh  90-rearrange-path.py  SD_ELF_NOTE_DLOPEN.xml  analyze.conf.xml  binfmt.d.xml  bootchart.conf.xml  bootctl.xml  bootup.xml  busctl.xml  capsule@.service.xml  cgroup-sandboxing.xml  check-os-release-simple.py  check-os-release.py  check-os-release.sh  chpst.8  clonetab.xml  common-variables.xml  coredump.conf.xml  coredumpctl.xml  cross-refs-html.xsl  crypttab.xml  custom-entities.ent.in  custom-html.xsl  custom-man.xsl  daemon.xml  directives-template.xml  dnssec-trust-anchors.d.xml  environment.d.xml  event-quick-child.c  extensions.conf.xml  fido2-crypttab.sh  file-hierarchy.xml  glib-event-glue.c  halt.xml  homectl.xml  homed.conf.xml  hostname.xml  hostnamectl.xml  (+606 more)
network/: 80-6rd-tunnel.link  80-6rd-tunnel.network  80-auto-link-local.network.example  80-container-host0-tun.network  80-container-host0.network  80-container-vb.link  80-container-vb.network  80-container-ve.link  80-container-ve.network  80-container-vz.link  80-container-vz.network  80-ethernet.network.example  80-idrac-nic.network  80-namespace-ns-tun.link  80-namespace-ns-tun.network  80-namespace-ns.link  80-namespace-ns.network  80-vendor-usb-nics.network  80-vm-vt.link  80-vm-vt.network  80-wifi-adhoc.network  80-wifi-ap.network  80-wifi-ap.network.example  80-wifi-station.network  80-wifi-station.network.example  89-ethernet.network.example  90-vrf.network  90-wifi-adhoc.network  99-default.link  meson.build
po/: .gitattributes  .gitignore  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  be.po  be@latin.po  bg.po  bo.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kab.po  kk.po  km.po  kn.po  ko.po  kw.po  lo.po  lt.po  meson.build  (+21 more)
presets/: 90-systemd-initrd.preset  90-systemd.preset  99-default-initrd.preset  meson.build
profile.d/: 70-systemd-shell-extra.sh  80-systemd-osc-context.sh  meson.build  systemd-osc-context.sh  systemd-shell-extra.sh
rules.d/: 50-udev-default.rules.in  53-storage-hardware.rules  56-fallback-scsi_id.rules  59-storage-content.rules  60-aspm.rules  60-autosuspend.rules  60-block.rules  60-camera.rules  60-ccid.rules  60-cdrom_id.rules  60-cryptsetup-id.rules  60-dmi-id.rules  60-drm.rules  60-evdev.rules  60-fido-id.rules  60-fingerprint.rules  60-gpiochip.rules  60-infiniband.rules  60-input-id.rules  60-net-dhcp.rules  60-persistent-alsa.rules  60-persistent-hidraw.rules  60-persistent-input.rules  60-persistent-media-controller.rules  60-persistent-media-ctl.rules  60-persistent-u3v.rules  (+36 more)
(+17661 files in other folders)
